--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
 
     <div class="nav-buttons">
         <button class="repo-btn" onclick="getReadme('smttl', 'vetcraft')">
-            <i class="fab fa-react"></i> Vetcraft Projem
+            <i class="fab fa-react"></i> Vetcraft
         </button>
         <button class="repo-btn" onclick="getReadme('smttl', 'smttl.github.io')">
-            <i class="fab fa-css3-alt"></i> CC hesaplayıcı Projem
+            <i class="fab fa-css3-alt"></i> CC hesaplayıcı
         </button>
         <button class="repo-btn" onclick="getReadme('smttl', 'proje_yoneticisi')">
-            <i class="fab fa-vuejs"></i> Tübitak Proje Yönetim Projem
+            <i class="fab fa-vuejs"></i> Tübitak Proje Yönetim Projesi
         </button>
         <button class="repo-btn" onclick="getReadme('smttl', 'TutunSabri')">
             <i class="fab fa-vuejs"></i> Tütün Sabri
